<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.developer.shaddox.swoosh.DesiredLeagueActivity">

    <ImageView
    android:id="@+id/desiredLeagueBackground"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:cropToPadding="true"
    android:scaleType="centerCrop"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1.0"
    app:srcCompat="@drawable/desiredleaguebg" />

    <ImageView
        android:id="@+id/swooshLogo"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/desiredLeagueBackground"
        app:srcCompat="@drawable/swooshlogo" />

    <TextView
        android:id="@+id/desiredLeagueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="welcome"
        android:fontFamily="@font/roboto"
        android:gravity="start"
        android:maxLines="2"
        android:text="@string/desired_league"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swooshLogo" />

    <Button
        android:id="@+id/mensLeagueButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_open"
        android:fontFamily="@font/roboto"
        android:padding="16dp"
        android:text="@string/mensLeague"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/womensLeagueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desiredLeagueText"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/womensLeagueButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/btn_open"
        android:fontFamily="@font/roboto"
        android:padding="16dp"
        android:text="@string/womensLeague"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/coedLeagueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mensLeagueButton" />

    <Button
        android:id="@+id/coedLeagueButton"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginBottom="96dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_open"
        android:fontFamily="@font/roboto"
        android:padding="16dp"
        android:text="@string/coedLeague"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/toLevelSelectActivityButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/womensLeagueButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/toLevelSelectActivityButton"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_open"
        android:fontFamily="@font/roboto"
        android:padding="16dp"
        android:text="@string/next"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
