<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.developer.shaddox.swoosh.MainActivity">


    <ImageView
        android:id="@+id/welcomeScreenBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/welcomescreenbg" />

    <TextView
        android:id="@+id/headlineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/headlineTop"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/headlineBottom"
        app:layout_constraintEnd_toEndOf="@+id/headlineBottom"
        app:layout_constraintStart_toStartOf="@+id/headlineBottom"
        app:layout_constraintTop_toBottomOf="@+id/swooshLogo"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/headlineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/headlineBottom"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/finishText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headlineTop" />

    <ImageView
        android:id="@+id/swooshLogo"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcomeScreenBackground"
        app:srcCompat="@drawable/swooshlogo" />

    <TextView
        android:id="@+id/finishText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="welcome"
        android:fontFamily="@font/roboto"
        android:maxLines="2"
        android:text="@string/description_text"
        android:textAlignment="viewStart"
        android:gravity="start"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="@+id/welcomeScreenBackground"
        app:layout_constraintEnd_toEndOf="@+id/headlineBottom"
        app:layout_constraintStart_toStartOf="@+id/headlineBottom"
        app:layout_constraintTop_toBottomOf="@+id/swooshLogo" />

    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_open_selector"
        android:fontFamily="@font/roboto"
        android:padding="16dp"
        android:text="@string/getStarted"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/welcomeScreenBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finishText"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
